--- a/Extension/style.css
+++ b/Extension/style.css
@@ -1,7 +1,17 @@
 body {
     width: 35em;
-    height: 45em;
+    height: 30em;
     background-color: #222222;
+}
+
+.title {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.title img {
+    width: 6em;
 }
 
 h1 {
@@ -10,59 +20,6 @@ h1 {
     text-align: center;
 }
 
-/* The switch - the box around the slider */
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-/* The slider */
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
-
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
-
-input:checked+.slider {
-    background-color: rgb(0, 255, 64);
-}
-
-input:focus+.slider {
-    box-shadow: 0 0 1px rgb(0, 255, 64);
-}
-
-input:checked+.slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-}
 
 /* Rounded sliders */
 .slider.round {
@@ -85,7 +42,7 @@ input:checked+.slider:before {
 }
 
 .add_bookmark_container {
-    margin-top: 15em;
+    margin-top: 7em;
     display: flex;
     justify-content: center;
     align-items: center;
