--- a/Extension/styles/style.css
+++ b/Extension/styles/style.css
@@ -6,6 +6,10 @@ body {
     transition-timing-function: ease-in-out;
 }
 
+.main-container {
+    display: none;
+}
+
 .title {
     display: flex;
     align-items: center;
@@ -16,7 +20,7 @@ body {
     width: 6em;
 }
 
-h1 {
+.title h1 {
     color: white;
     font-weight: bold;
     text-align: center;
@@ -25,19 +29,19 @@ h1 {
 
 
 
-.add_bookmark_container {
+.main-container .add_bookmark_container {
     margin-top: 7em;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#add_bookmark:hover {
+.main-container #add_bookmark:hover {
     background-color: rgb(0, 255, 64);
     color: black;
 }
 
-#add_bookmark {
+.main-container #add_bookmark {
     transition: .4s;
     border-radius: 5em;
     font-weight: bold;
@@ -49,14 +53,14 @@ h1 {
     cursor: pointer;
 }
 
-.check_website_container {
+.main-container .check_website_container {
     margin-top: 6em;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#check_website {
+.main-container #check_website {
     transition: .4s;
     border-radius: 5em;
     font-weight: bold;
@@ -68,21 +72,21 @@ h1 {
     cursor: pointer;
 }
 
-#check_website:hover {
+.main-container #check_website:hover {
     background-color: rgb(0, 255, 64);
     color: black;
 }
 
 
 
-.test {
+.main-container .test {
     margin-top: 5em;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.gauge {
+.main-container .gauge {
     opacity: 0;
     width: 100%;
     max-width: 15em;
@@ -93,12 +97,12 @@ h1 {
 }
 
 
-.gauge.visible {
+.main-container .gauge.visible {
     display: block;
     opacity: 1;
 }
 
-.gauge-body {
+.main-container .gauge-body {
     width: 100%;
     height: 0;
     padding-bottom: 50%;
@@ -109,7 +113,7 @@ h1 {
     overflow: hidden;
 }
 
-.fill {
+.main-container .fill {
     position: absolute;
     top: 100%;
     left: 0;
@@ -121,7 +125,7 @@ h1 {
     transform: rotate(0turn);
 }
 
-.cover {
+.main-container .cover {
     width: 75%;
     height: 150%;
     background: #222222;
@@ -138,7 +142,7 @@ h1 {
     box-sizing: border-box;
 }
 
-.error-container {
+.main-container .error-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -146,11 +150,11 @@ h1 {
     opacity: 0;
 }
 
-.error-container.visible {
+.main-container .error-container.visible {
     opacity: 1;
 }
 
-.details {
+.main-container .details {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -162,14 +166,14 @@ h1 {
     display: none;
 }
 
-.details a {
+.main-container .details a {
     font-weight: bold;
     cursor: pointer;
     text-decoration: underline;
     font-size: .85rem;
 }
 
-.details.visible {
+.main-container .details.visible {
     opacity: 1;
     display: block;
     display: flex;
@@ -179,18 +183,18 @@ h1 {
 
 /* Loading element */
 
-.loader-container {
+.main-container .loader-container {
     margin-top: 3em;
     display: none;
     justify-content: center;
     align-items: center;
 }
 
-.loader-container.visible {
+.main-container .loader-container.visible {
     display: flex;
 }
 
-.dot-spinner {
+.main-container .dot-spinner {
     --uib-size: 2.8rem;
     --uib-speed: .9s;
     --uib-color: #15ff00;
@@ -202,7 +206,7 @@ h1 {
     width: var(--uib-size);
 }
 
-.dot-spinner__dot {
+.main-container .dot-spinner__dot {
     position: absolute;
     top: 0;
     left: 0;
@@ -213,7 +217,7 @@ h1 {
     width: 100%;
 }
 
-.dot-spinner__dot::before {
+.main-container .dot-spinner__dot::before {
     content: '';
     height: 20%;
     width: 20%;
@@ -225,59 +229,59 @@ h1 {
     box-shadow: 0 0 20px rgba(18, 31, 53, 0.3);
 }
 
-.dot-spinner__dot:nth-child(2) {
+.main-container .dot-spinner__dot:nth-child(2) {
     transform: rotate(45deg);
 }
 
-.dot-spinner__dot:nth-child(2)::before {
+.main-container .dot-spinner__dot:nth-child(2)::before {
     animation-delay: calc(var(--uib-speed) * -0.875);
 }
 
-.dot-spinner__dot:nth-child(3) {
+.main-container .dot-spinner__dot:nth-child(3) {
     transform: rotate(90deg);
 }
 
-.dot-spinner__dot:nth-child(3)::before {
+.main-container .dot-spinner__dot:nth-child(3)::before {
     animation-delay: calc(var(--uib-speed) * -0.75);
 }
 
-.dot-spinner__dot:nth-child(4) {
+.main-container .dot-spinner__dot:nth-child(4) {
     transform: rotate(135deg);
 }
 
-.dot-spinner__dot:nth-child(4)::before {
+.main-container .dot-spinner__dot:nth-child(4)::before {
     animation-delay: calc(var(--uib-speed) * -0.625);
 }
 
-.dot-spinner__dot:nth-child(5) {
+.main-container .dot-spinner__dot:nth-child(5) {
     transform: rotate(180deg);
 }
 
-.dot-spinner__dot:nth-child(5)::before {
+.main-container .dot-spinner__dot:nth-child(5)::before {
     animation-delay: calc(var(--uib-speed) * -0.5);
 }
 
-.dot-spinner__dot:nth-child(6) {
+.main-container .dot-spinner__dot:nth-child(6) {
     transform: rotate(225deg);
 }
 
-.dot-spinner__dot:nth-child(6)::before {
+.main-container .dot-spinner__dot:nth-child(6)::before {
     animation-delay: calc(var(--uib-speed) * -0.375);
 }
 
-.dot-spinner__dot:nth-child(7) {
+.main-container .dot-spinner__dot:nth-child(7) {
     transform: rotate(270deg);
 }
 
-.dot-spinner__dot:nth-child(7)::before {
+.main-container .dot-spinner__dot:nth-child(7)::before {
     animation-delay: calc(var(--uib-speed) * -0.25);
 }
 
-.dot-spinner__dot:nth-child(8) {
+.main-container .dot-spinner__dot:nth-child(8) {
     transform: rotate(315deg);
 }
 
-.dot-spinner__dot:nth-child(8)::before {
+.main-container .dot-spinner__dot:nth-child(8)::before {
     animation-delay: calc(var(--uib-speed) * -0.125);
 }
 
@@ -293,4 +297,61 @@ h1 {
         transform: scale(1);
         opacity: 1;
     }
+}
+
+.main-container .logout-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-container .logout-container button {
+    margin-bottom: 1em;
+    padding: .7em 1.5em .7em 1.5em;
+    background-color: #00ff40;
+    color: #222222;
+    border: none;
+    cursor: pointer;
+    border-radius: 2em;
+}
+
+.login-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.login-container h1 {
+    text-align: center;
+    color: #00ff40;
+}
+
+.login-container #loginForm {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.login-container input {
+    padding: 1em;
+    margin-bottom: 1em;
+    background-color: #161616;
+    border: none;
+    border-radius: 2em;
+    border: 1.5px solid #00ff40;
+    color: white;
+    text-align: center;
+}
+
+.login-container button {
+    padding: .7em 1.5em .7em 1.5em;
+    background-color: #00ff40;
+    color: #222222;
+    border: none;
+    cursor: pointer;
+    border-radius: 2em;
 }
